--- a/initial_cleaning.Rmd
+++ b/initial_cleaning.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "MCCHD Covid-19 initial data cleaning"
 author: "Ethan Walker"
-date: "Started 2 April 2020, Updated 17 April 2020"
+date: "Started 2 April 2020, Updated 20 April 2020"
 output:
   pdf_document: default
   html_document:
@@ -33,7 +33,7 @@ input_path <- c("C:/Users/ethan.walker/Box/Ethan Walker UM/R/covid19/")
 
 
 covid_data_initial <- 
-   read_xlsx(paste0(input_path, "Input/mcchd_covid_data_20200416.xlsx"), skip = 1,
+   read_xlsx(paste0(input_path, "Input/mcchd_covid_data_20200417.xlsx"), skip = 1,
                         col_names = c("dob", "gender", "zipcode", "healthcare_worker",
                                       "symptoms", "symptom_type", "symptom_onset_date",
                                       "test_date", "test_results", "test_lab", "last_exposure_date", 
@@ -57,6 +57,7 @@ covid_data_initial <-
 
 ```{r}
 covid_clean <- covid_data_initial %>% 
+   filter(!is.na(dob)) %>% 
    rownames_to_column() %>% 
    mutate(case_number = as.numeric(rowname),
           dob = ymd(dob),
@@ -86,7 +87,7 @@ covid_clean <- covid_data_initial %>%
           symptom_taste_smell = grepl("TASTE|SMELL", symptom_type, ignore.case = TRUE),
           symptom_fever_chill = grepl("FEVER|CHILL|CHILLS|NIGHT SWEAT", symptom_type, ignore.case = TRUE),
           symptom_fatigue_lethargy = grepl("FATIGUE|LETHARGY", symptom_type, ignore.case = TRUE),
-          symptom_nv_diarrhea = grepl("NAUSEA|N/V|DIARRHEA|N/V/D|ABDOMINAL", symptom_type, ignore.case = TRUE),
+          symptom_nv_diarrhea = grepl("NAUSEA|N/V|DIARRHEA|N/V/D|ABDOMINAL|STOMACH", symptom_type, ignore.case = TRUE),
           symptom_aches = grepl("BODY ACHES|HEADACHE|MYALGIA|HA|H/A|ACHES", symptom_type, ignore.case = TRUE),
           symptom_sinus_throat = grepl("CONGESTION|RUNNY NOSE|SNEEZING|SORE THROAT|RHINORRHEA|SCRATCHY THROAT|THROAT|SINUS", 
                                        symptom_type, ignore.case = TRUE),
